tests/fixtures/invalid/int_ge_bytes.py
# Cannot compare with >= Int and Bytes
x: bool = 1 >= b"hello"
